--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@emailjs/browser": "https://esm.sh/@emailjs/browser@3.11.0"
   }
 }
 </script>
