--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
     <script>
       // Polyfill global and process for browser environment
       window.global = window;
-      // In a real production build, use a bundler (Vite/Webpack) to inject process.env.API_KEY
-      // Updated API Key per user request
-      window.process = { env: { API_KEY: 'AIzaSyD86p_5M0oPf1paYInfQKxbF1Il9HOBkHY' } };
       
       if (typeof window.Buffer === 'undefined') { window.Buffer = buffer.Buffer; }
 
@@ -150,7 +147,10 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@emailjs/browser": "https://esm.sh/@emailjs/browser@3.11.0"
+    "@emailjs/browser": "https://esm.sh/@emailjs/browser@3.11.0",
+    "firebase/app": "https://esm.sh/firebase@10.13.1/app",
+    "firebase/auth": "https://esm.sh/firebase@10.13.1/auth",
+    "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
 </script>
