--- a/index.html
+++ b/index.html
@@ -139,6 +139,62 @@
         .bento-grid { grid-template-columns: repeat(3, minmax(0, 1fr)); }
         .col-span-2 { grid-column: span 2 / span 2; }
       }
+
+      /* Markdown Styles */
+      .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6 {
+        font-weight: 700;
+        margin-top: 1.5em;
+        margin-bottom: 0.5em;
+        line-height: 1.2;
+      }
+      .markdown-body h1 { font-size: 1.5em; }
+      .markdown-body h2 { font-size: 1.3em; }
+      .markdown-body h3 { font-size: 1.1em; }
+      .markdown-body p { margin-top: 0; margin-bottom: 1em; }
+      .markdown-body ul, .markdown-body ol { margin-top: 0; margin-bottom: 1em; padding-left: 2em; }
+      .markdown-body ul { list-style-type: disc; }
+      .markdown-body ol { list-style-type: decimal; }
+      .markdown-body li + li { margin-top: 0.25em; }
+      .markdown-body strong { font-weight: 700; color: #4f46e5; }
+      .dark .markdown-body strong { color: #818cf8; }
+      .markdown-body em { font-style: italic; }
+      .markdown-body code {
+        padding: 0.2em 0.4em;
+        margin: 0;
+        font-size: 85%;
+        background-color: rgba(175, 184, 193, 0.2);
+        border-radius: 6px;
+        font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+      }
+      .dark .markdown-body code { background-color: rgba(110, 118, 129, 0.4); }
+      .markdown-body pre {
+        padding: 16px;
+        overflow: auto;
+        font-size: 85%;
+        line-height: 1.45;
+        background-color: #f6f8fa;
+        border-radius: 6px;
+        margin-bottom: 1em;
+      }
+      .dark .markdown-body pre { background-color: #161b22; }
+      .markdown-body pre code {
+        display: inline;
+        max-width: auto;
+        padding: 0;
+        margin: 0;
+        overflow: visible;
+        line-height: inherit;
+        word-wrap: normal;
+        background-color: transparent;
+        border: 0;
+      }
+      .markdown-body blockquote {
+        padding: 0 1em;
+        color: #656d76;
+        border-left: 0.25em solid #d0d7de;
+        margin: 0 0 1em 0;
+      }
+      .dark .markdown-body blockquote { color: #8b949e; border-left-color: #30363d; }
     </style>
   </head>
   <body>
